# hft-asm-l2-conflator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: SPECS.md  TUTORIAL.md  discourse.md
docs/baselines/: cpp_opt_release.json
include/: asm_conflator.h
results/: benchmark_report_opt_release.json  benchmark_report_release.json
scripts/: compare_legacy.py
src/: feed.c  main.c  parse_fast.c  pipeline.c  report.c  util.c
src/asm/: latency.S  parse.S  spsc.S  vwap.S
tests/: test_main.c
